# OpenCVNumberRecognition

./: CMakeLists.txt  main.cpp
data/learn/: bias1.txt  bias2.txt  classifiers.txt  ranges.txt  weights1.txt  weights2.txt
data/learn/learning workspace/: learner.m
include/: matrix.hpp  nnw.hpp  observer.hpp
source/: CMakeLists.txt  matrix.cpp  nnw.cpp  observer.cpp
tests/representation/C++/: data_generator.cpp  testing.cpp
tests/representation/matlab/: answers_generator.asv  answers_generator.m  net.mat  nn1.mat
